feat: up project

--- a/.env
+++ b/.env
@@ -1,5 +1,26 @@
 APP_ENV=dev
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=test_db
-MYSQL_USER=docker
-MYSQL_PASSWORD=docker
+#MYSQL_ROOT_PASSWORD=root
+#MYSQL_DATABASE=test_db
+#MYSQL_USER=docker
+#MYSQL_PASSWORD=docker
+
+NODE_ENV=development
+PORT=8080
+APP_ENV=dev
+POSTGRES_DB=test_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+DB_SCHEMA=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=postgres
+DB_PORT=5432
+HOST_PORT=5432
+CONTAINER_PORT=5432
+HOST_PORT_REDIS=6379
+CONTAINER_PORT_REDIS=6379
+SECRET=secret
+JWT_TOKEN_EXPIRE_TIME=30s
+MAIL_HOST=smtp.ethereal.email
+MAIL_USERNAME=faye.daniel78@ethereal.email
+MAIL_PASSWORD=4QXTEeZpCYfFmXc9at
