--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,5 +10,5 @@ services:
         SSH_PRIVATE_KEY: $SSH_PRIVATE_KEY
     environment:
       - GO111MODULE=off
-    working_dir: /go/src/github.com/go-mysql-crud
+    working_dir: /go/src/github.com/golang-ddd-postgreql-auth
     command: "go test -v -timeout 10m -tags=integration -parallel=4 ./..."
